// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`utils/preview-tokens > buildPreviewScope > builds a forced dark scope 1`] = `
{
  "--color-preview-100-dark-hex": "#63000e",
  "--color-preview-100-dark-oklch": "oklch(30.599% 0.13853 19.9)",
  "--color-preview-100-light-hex": "#63000e",
  "--color-preview-100-light-oklch": "oklch(30.599% 0.13853 19.9)",
  "--color-preview-200-dark-hex": "#830016",
  "--color-preview-200-dark-oklch": "oklch(37.325% 0.16898 19.9)",
  "--color-preview-200-light-hex": "#830016",
  "--color-preview-200-light-oklch": "oklch(37.325% 0.16898 19.9)",
  "--color-preview-300-dark-hex": "#ab0020",
  "--color-preview-300-dark-oklch": "oklch(45.185% 0.20456 19.9)",
  "--color-preview-300-light-hex": "#ab0020",
  "--color-preview-300-light-oklch": "oklch(45.185% 0.20456 19.9)",
  "--color-preview-400-dark-hex": "#d8002b",
  "--color-preview-400-dark-oklch": "oklch(53.885% 0.24395 19.9)",
  "--color-preview-400-light-hex": "#d8002b",
  "--color-preview-400-light-oklch": "oklch(53.885% 0.24395 19.9)",
  "--color-preview-50-dark-hex": "#4e0009",
  "--color-preview-50-dark-oklch": "oklch(26% 0.11771 19.9)",
  "--color-preview-50-light-hex": "#4e0009",
  "--color-preview-50-light-oklch": "oklch(26% 0.11771 19.9)",
  "--color-preview-500-dark-hex": "#ff0044",
  "--color-preview-500-dark-oklch": "oklch(63.27% 0.254 19.9)",
  "--color-preview-500-light-hex": "#ff0044",
  "--color-preview-500-light-oklch": "oklch(63.27% 0.254 19.9)",
  "--color-preview-600-dark-hex": "#ff3155",
  "--color-preview-600-dark-oklch": "oklch(68.833% 0.254 19.9)",
  "--color-preview-600-light-hex": "#ff3155",
  "--color-preview-600-light-oklch": "oklch(68.833% 0.254 19.9)",
  "--color-preview-700-dark-hex": "#ff8085",
  "--color-preview-700-dark-oklch": "oklch(76.969% 0.17518 19.9)",
  "--color-preview-700-light-hex": "#ff8085",
  "--color-preview-700-light-oklch": "oklch(76.969% 0.17518 19.9)",
  "--color-preview-800-dark-hex": "#ffbab9",
  "--color-preview-800-dark-oklch": "oklch(86.476% 0.09432 19.9)",
  "--color-preview-800-light-hex": "#ffbab9",
  "--color-preview-800-light-oklch": "oklch(86.476% 0.09432 19.9)",
  "--color-preview-900-dark-hex": "#fff0f0",
  "--color-preview-900-dark-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-900-light-hex": "#fff0f0",
  "--color-preview-900-light-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-dark-hex": "#ff0044",
  "--color-preview-dark-oklch": "oklch(63.27% 0.254 19.9)",
  "--color-preview-foreground-dark-hex": "#ffffff",
  "--color-preview-foreground-dark-oklch": "#ffffff",
  "--color-preview-foreground-light-hex": "#ffffff",
  "--color-preview-foreground-light-oklch": "#ffffff",
  "--color-preview-light-hex": "#ff0044",
  "--color-preview-light-oklch": "oklch(63.27% 0.254 19.9)",
}
`;

exports[`utils/preview-tokens > buildPreviewScope > builds a forced light scope 1`] = `
{
  "--color-preview-100-dark-hex": "#ffdcda",
  "--color-preview-100-dark-oklch": "oklch(92.837% 0.04734 19.9)",
  "--color-preview-100-light-hex": "#ffdcda",
  "--color-preview-100-light-oklch": "oklch(92.837% 0.04734 19.9)",
  "--color-preview-200-dark-hex": "#ffbbbb",
  "--color-preview-200-dark-oklch": "oklch(86.751% 0.09218 19.9)",
  "--color-preview-200-light-hex": "#ffbbbb",
  "--color-preview-200-light-oklch": "oklch(86.751% 0.09218 19.9)",
  "--color-preview-300-dark-hex": "#ff9294",
  "--color-preview-300-dark-oklch": "oklch(79.637% 0.15104 19.9)",
  "--color-preview-300-light-hex": "#ff9294",
  "--color-preview-300-light-oklch": "oklch(79.637% 0.15104 19.9)",
  "--color-preview-400-dark-hex": "#ff5466",
  "--color-preview-400-dark-oklch": "oklch(71.763% 0.22593 19.9)",
  "--color-preview-400-light-hex": "#ff5466",
  "--color-preview-400-light-oklch": "oklch(71.763% 0.22593 19.9)",
  "--color-preview-50-dark-hex": "#fff0f0",
  "--color-preview-50-dark-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-50-light-hex": "#fff0f0",
  "--color-preview-50-light-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-500-dark-hex": "#ff0044",
  "--color-preview-500-dark-oklch": "oklch(63.27% 0.254 19.9)",
  "--color-preview-500-light-hex": "#ff0044",
  "--color-preview-500-light-oklch": "oklch(63.27% 0.254 19.9)",
  "--color-preview-600-dark-hex": "#e80031",
  "--color-preview-600-dark-oklch": "oklch(57.123% 0.254 19.9)",
  "--color-preview-600-light-hex": "#e80031",
  "--color-preview-600-light-oklch": "oklch(57.123% 0.254 19.9)",
  "--color-preview-700-dark-hex": "#ba0024",
  "--color-preview-700-dark-oklch": "oklch(48.134% 0.21791 19.9)",
  "--color-preview-700-light-hex": "#ba0024",
  "--color-preview-700-light-oklch": "oklch(48.134% 0.21791 19.9)",
  "--color-preview-800-dark-hex": "#850017",
  "--color-preview-800-dark-oklch": "oklch(37.629% 0.17035 19.9)",
  "--color-preview-800-light-hex": "#850017",
  "--color-preview-800-light-oklch": "oklch(37.629% 0.17035 19.9)",
  "--color-preview-900-dark-hex": "#4e0009",
  "--color-preview-900-dark-oklch": "oklch(26% 0.11771 19.9)",
  "--color-preview-900-light-hex": "#4e0009",
  "--color-preview-900-light-oklch": "oklch(26% 0.11771 19.9)",
  "--color-preview-dark-hex": "#ff0044",
  "--color-preview-dark-oklch": "oklch(63.27% 0.254 19.9)",
  "--color-preview-foreground-dark-hex": "#ffffff",
  "--color-preview-foreground-dark-oklch": "#ffffff",
  "--color-preview-foreground-light-hex": "#ffffff",
  "--color-preview-foreground-light-oklch": "#ffffff",
  "--color-preview-light-hex": "#ff0044",
  "--color-preview-light-oklch": "oklch(63.27% 0.254 19.9)",
}
`;

exports[`utils/preview-tokens > buildPreviewScope > locks very dark colors (l <= 0.3) to the light scale on both slots 1`] = `
{
  "--color-preview-100-dark-hex": "#ffb7b7",
  "--color-preview-100-dark-oklch": "oklch(86.017% 0.09791 19.9)",
  "--color-preview-100-light-hex": "#ffb7b7",
  "--color-preview-100-light-oklch": "oklch(86.017% 0.09791 19.9)",
  "--color-preview-200-dark-hex": "#ff3f5b",
  "--color-preview-200-dark-oklch": "oklch(69.956% 0.24477 19.9)",
  "--color-preview-200-light-hex": "#ff3f5b",
  "--color-preview-200-light-oklch": "oklch(69.956% 0.24477 19.9)",
  "--color-preview-300-dark-hex": "#ca0028",
  "--color-preview-300-dark-oklch": "oklch(51.187% 0.23173 19.9)",
  "--color-preview-300-light-hex": "#ca0028",
  "--color-preview-300-light-oklch": "oklch(51.187% 0.23173 19.9)",
  "--color-preview-400-dark-hex": "#62000e",
  "--color-preview-400-dark-oklch": "oklch(30.41% 0.13767 19.9)",
  "--color-preview-400-light-hex": "#62000e",
  "--color-preview-400-light-oklch": "oklch(30.41% 0.13767 19.9)",
  "--color-preview-50-dark-hex": "#fff0f0",
  "--color-preview-50-dark-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-50-light-hex": "#fff0f0",
  "--color-preview-50-light-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-500-dark-hex": "#070000",
  "--color-preview-500-dark-oklch": "oklch(8% 0.03628 19.9)",
  "--color-preview-500-light-hex": "#070000",
  "--color-preview-500-light-oklch": "oklch(8% 0.03628 19.9)",
  "--color-preview-600-dark-hex": "#110001",
  "--color-preview-600-dark-oklch": "oklch(10.969% 0.04969 19.9)",
  "--color-preview-600-light-hex": "#110001",
  "--color-preview-600-light-oklch": "oklch(10.969% 0.04969 19.9)",
  "--color-preview-700-dark-hex": "#220002",
  "--color-preview-700-dark-oklch": "oklch(15.31% 0.06933 19.9)",
  "--color-preview-700-light-hex": "#220002",
  "--color-preview-700-light-oklch": "oklch(15.31% 0.06933 19.9)",
  "--color-preview-800-dark-hex": "#360004",
  "--color-preview-800-dark-oklch": "oklch(20.384% 0.09229 19.9)",
  "--color-preview-800-light-hex": "#360004",
  "--color-preview-800-light-oklch": "oklch(20.384% 0.09229 19.9)",
  "--color-preview-900-dark-hex": "#4e0009",
  "--color-preview-900-dark-oklch": "oklch(26% 0.11771 19.9)",
  "--color-preview-900-light-hex": "#4e0009",
  "--color-preview-900-light-oklch": "oklch(26% 0.11771 19.9)",
  "--color-preview-dark-hex": "#070000",
  "--color-preview-dark-oklch": "oklch(8% 0.03628 19.9)",
  "--color-preview-foreground-dark-hex": "#ffffff",
  "--color-preview-foreground-dark-oklch": "#ffffff",
  "--color-preview-foreground-light-hex": "#ffffff",
  "--color-preview-foreground-light-oklch": "#ffffff",
  "--color-preview-light-hex": "#070000",
  "--color-preview-light-oklch": "oklch(8% 0.03628 19.9)",
}
`;

exports[`utils/preview-tokens > buildPreviewScope > locks very light colors (l >= 0.9) to the dark scale on both slots 1`] = `
{
  "--color-preview-100-dark-hex": "#750013",
  "--color-preview-100-dark-oklch": "oklch(34.392% 0.1557 19.9)",
  "--color-preview-100-light-hex": "#750013",
  "--color-preview-100-light-oklch": "oklch(34.392% 0.1557 19.9)",
  "--color-preview-200-dark-hex": "#b20022",
  "--color-preview-200-dark-oklch": "oklch(46.663% 0.21125 19.9)",
  "--color-preview-200-light-hex": "#b20022",
  "--color-preview-200-light-oklch": "oklch(46.663% 0.21125 19.9)",
  "--color-preview-300-dark-hex": "#f6003d",
  "--color-preview-300-dark-oklch": "oklch(61.003% 0.254 19.9)",
  "--color-preview-300-light-hex": "#f6003d",
  "--color-preview-300-light-oklch": "oklch(61.003% 0.254 19.9)",
  "--color-preview-400-dark-hex": "#ff7f84",
  "--color-preview-400-dark-oklch": "oklch(76.878% 0.17602 19.9)",
  "--color-preview-400-light-hex": "#ff7f84",
  "--color-preview-400-light-oklch": "oklch(76.878% 0.17602 19.9)",
  "--color-preview-50-dark-hex": "#4e0009",
  "--color-preview-50-dark-oklch": "oklch(26% 0.11771 19.9)",
  "--color-preview-50-light-hex": "#4e0009",
  "--color-preview-50-light-oklch": "oklch(26% 0.11771 19.9)",
  "--color-preview-500-dark-hex": "#ffe1e0",
  "--color-preview-500-dark-oklch": "oklch(94% 0.03928 19.9)",
  "--color-preview-500-light-hex": "#ffe1e0",
  "--color-preview-500-light-oklch": "oklch(94% 0.03928 19.9)",
  "--color-preview-600-dark-hex": "#ffe4e3",
  "--color-preview-600-dark-oklch": "oklch(94.495% 0.0359 19.9)",
  "--color-preview-600-light-hex": "#ffe4e3",
  "--color-preview-600-light-oklch": "oklch(94.495% 0.0359 19.9)",
  "--color-preview-700-dark-hex": "#ffe8e7",
  "--color-preview-700-dark-oklch": "oklch(95.218% 0.031 19.9)",
  "--color-preview-700-light-hex": "#ffe8e7",
  "--color-preview-700-light-oklch": "oklch(95.218% 0.031 19.9)",
  "--color-preview-800-dark-hex": "#ffeceb",
  "--color-preview-800-dark-oklch": "oklch(96.064% 0.02535 19.9)",
  "--color-preview-800-light-hex": "#ffeceb",
  "--color-preview-800-light-oklch": "oklch(96.064% 0.02535 19.9)",
  "--color-preview-900-dark-hex": "#fff0f0",
  "--color-preview-900-dark-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-900-light-hex": "#fff0f0",
  "--color-preview-900-light-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-dark-hex": "#ffe1e0",
  "--color-preview-dark-oklch": "oklch(94% 0.03928 19.9)",
  "--color-preview-foreground-dark-hex": "#000000",
  "--color-preview-foreground-dark-oklch": "#000000",
  "--color-preview-foreground-light-hex": "#000000",
  "--color-preview-foreground-light-oklch": "#000000",
  "--color-preview-light-hex": "#ffe1e0",
  "--color-preview-light-oklch": "oklch(94% 0.03928 19.9)",
}
`;

exports[`utils/preview-tokens > buildPreviewScope > splits mid-lightness colors into distinct light and dark scales 1`] = `
{
  "--color-preview-100-dark-hex": "#63000e",
  "--color-preview-100-dark-oklch": "oklch(30.599% 0.13853 19.9)",
  "--color-preview-100-light-hex": "#ffdcda",
  "--color-preview-100-light-oklch": "oklch(92.837% 0.04734 19.9)",
  "--color-preview-200-dark-hex": "#830016",
  "--color-preview-200-dark-oklch": "oklch(37.325% 0.16898 19.9)",
  "--color-preview-200-light-hex": "#ffbbbb",
  "--color-preview-200-light-oklch": "oklch(86.751% 0.09218 19.9)",
  "--color-preview-300-dark-hex": "#ab0020",
  "--color-preview-300-dark-oklch": "oklch(45.185% 0.20456 19.9)",
  "--color-preview-300-light-hex": "#ff9294",
  "--color-preview-300-light-oklch": "oklch(79.637% 0.15104 19.9)",
  "--color-preview-400-dark-hex": "#d8002b",
  "--color-preview-400-dark-oklch": "oklch(53.885% 0.24395 19.9)",
  "--color-preview-400-light-hex": "#ff5466",
  "--color-preview-400-light-oklch": "oklch(71.763% 0.22593 19.9)",
  "--color-preview-50-dark-hex": "#4e0009",
  "--color-preview-50-dark-oklch": "oklch(26% 0.11771 19.9)",
  "--color-preview-50-light-hex": "#fff0f0",
  "--color-preview-50-light-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-500-dark-hex": "#ff0044",
  "--color-preview-500-dark-oklch": "oklch(63.27% 0.254 19.9)",
  "--color-preview-500-light-hex": "#ff0044",
  "--color-preview-500-light-oklch": "oklch(63.27% 0.254 19.9)",
  "--color-preview-600-dark-hex": "#ff3155",
  "--color-preview-600-dark-oklch": "oklch(68.833% 0.254 19.9)",
  "--color-preview-600-light-hex": "#e80031",
  "--color-preview-600-light-oklch": "oklch(57.123% 0.254 19.9)",
  "--color-preview-700-dark-hex": "#ff8085",
  "--color-preview-700-dark-oklch": "oklch(76.969% 0.17518 19.9)",
  "--color-preview-700-light-hex": "#ba0024",
  "--color-preview-700-light-oklch": "oklch(48.134% 0.21791 19.9)",
  "--color-preview-800-dark-hex": "#ffbab9",
  "--color-preview-800-dark-oklch": "oklch(86.476% 0.09432 19.9)",
  "--color-preview-800-light-hex": "#850017",
  "--color-preview-800-light-oklch": "oklch(37.629% 0.17035 19.9)",
  "--color-preview-900-dark-hex": "#fff0f0",
  "--color-preview-900-dark-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-900-light-hex": "#4e0009",
  "--color-preview-900-light-oklch": "oklch(26% 0.11771 19.9)",
  "--color-preview-dark-hex": "#ff0044",
  "--color-preview-dark-oklch": "oklch(63.27% 0.254 19.9)",
  "--color-preview-foreground-dark-hex": "#ffffff",
  "--color-preview-foreground-dark-oklch": "#ffffff",
  "--color-preview-foreground-light-hex": "#ffffff",
  "--color-preview-foreground-light-oklch": "#ffffff",
  "--color-preview-light-hex": "#ff0044",
  "--color-preview-light-oklch": "oklch(63.27% 0.254 19.9)",
}
`;
